--- a/level1_task1.html
+++ b/level1_task1.html
@@ -28,6 +28,13 @@
             margin: 0 20px;
             font-weight: 600;
         }
+        nav a{
+            color: #fff
+            text-decoration: none;
+            margin: 0 20px;
+            font-weight: 600; 
+
+        }
         .container {
             max-width: 1200px;
             margin: 0 auto;
