--- a/level1_task1.html
+++ b/level1_task1.html
@@ -22,12 +22,12 @@
             justify-content: center;
             padding: 20px 0;
         }
-        nav a {
+        /* nav a {
             color: #fff;
             text-decoration: none;
             margin: 0 20px;
             font-weight: 600;
-        }
+        } */
         nav a{
             color: #fff
             text-decoration: none;
