--- a/level1_task1.html
+++ b/level1_task1.html
@@ -22,12 +22,11 @@
             justify-content: center;
             padding: 20px 0;
         }
-        nav a{
-            color: #fff
+        nav a {
+            color: #fff;
             text-decoration: none;
             margin: 0 20px;
-            font-weight: 600; 
-
+            font-weight: 600;
         }
         .container {
             max-width: 1200px;
