--- a/level1_task1.html
+++ b/level1_task1.html
@@ -11,6 +11,7 @@
             margin: 0;
             padding: 0;
         }
+        /* inline css */
         header {
             background: linear-gradient(to right, #FF416C, #e82e0d);
             color: #fff;
